<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/patview"
    android:background="@color/black"
    android:orientation="vertical">
        <TextView
            android:id="@+id/patview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin24"
            android:gravity="center"
            android:text="@string/pat"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize"/>
        <Button
            android:id="@+id/plusone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin0"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/margin24"
            android:layout_marginStart="@dimen/margin24"
            android:layout_marginTop="@dimen/margin24"
            android:layout_weight="1"
            android:background="@color/black"
            android:text="@string/plusone"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/plustwo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin0"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin24"
            android:layout_marginEnd="@dimen/margin24"
            android:layout_marginStart="@dimen/margin24"
            android:layout_marginTop="@dimen/margin24"
            android:layout_weight="1"
            android:background="@color/black"
            android:text="@string/plustwo"
            android:textColor="@color/white" />
    </LinearLayout>
